--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "dev": "webpack serve  --config ./devWebpack.config.js",
     "test": "jest --config ./jest.config.json"
   },
   "repository": {
