--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "connect-history-api-fallback": "^1.6.0",
     "copy-webpack-plugin": "^6.2.1",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-static-gzip": "^2.1.0",
+    "pg": "^8.6.0",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9",
     "vue-svg-sprite": "^1.4.3"
