feat: preact config

--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,8 @@
                 "loose": true
             }
         ],
-        "@babel/preset-typescript"
+        "@babel/preset-react",
+        "@babel/preset-typescript",
     ],
     "env": {
         "production": {
