--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   ],
   "extends": [
     "airbnb-typescript",
+    "react-app",
     "plugin:@typescript-eslint/recommended",
     "plugin:jest/recommended",
     "prettier"
