--- a/package.json
+++ b/package.json
@@ -35,16 +35,14 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-static-gzip": "^2.1.0",
-    "pg": "^8.6.0",
-    "vue": "^2.6.12",
-    "vue-router": "^3.4.9",
-    "vue-svg-sprite": "^1.4.3"
+    "pg": "^8.6.0",  
+    "preact": "^10.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
-    "@types/enzyme": "^3.10.8",
+    "@babel/preset-react": "7.18.6",
     "@types/pg": "^8.6.0",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
@@ -57,6 +55,7 @@
     "eslint": "^7.13.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.0",
@@ -72,8 +71,6 @@
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
