--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "jsx": "react",
         "outDir": "./dist/",
         "sourceMap": true,
         "noImplicitAny": true,
