--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "mini-css-extract-plugin": "^1.3.0",
     "mock-stdin": "^1.0.0",
     "postcss-loader": "^4.0.4",
+    "postcss-nested": "^6.0.0",
     "postcss-preset-env": "^6.7.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
