--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
     "eslint": "^7.13.0",
-    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
