--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,7 @@
     "react/destructuring-assignment": "off",
     "import/no-cycle": 0,
     "import/no-named-as-default": 0,
+    "import/extensions": "never",
     "no-param-reassign": 0,
     "react/function-component-definition": [2, { "namedComponents": "arrow-function" }]
   }
