--- a/jest.config.json
+++ b/jest.config.json
@@ -1,7 +1,6 @@
 {
   "moduleNameMapper": {
     "\\.(css|less)$": "<rootDir>/tests/__mocks__/styleMock.js",
-    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tests/__mocks__/styleMock.js",
-    "^SRC(.*)$": "<rootDir>/src$1"
+    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tests/__mocks__/styleMock.js"
   }
 }
