--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,18 @@
 {
-    "compilerOptions": {
-        "jsx": "react",
-        "outDir": "./dist/",
-        "sourceMap": true,
-        "noImplicitAny": true,
-        "module": "commonjs",
-        "target": "es6",
-        "allowJs": true,
-        "allowSyntheticDefaultImports": true,
-        "baseUrl": ".",
-    },
-    
-    "include": [
-        "src/**/*",
-        "index.d.ts",
-        "declarations.d.ts",
-        "tests/**/*",
-    ],
-    "exclude": [
-        "./node_modules",
-        "./build",
-        "./dist",
-    ],
-    // for alias 
+  "compilerOptions": {
+    "jsx": "react",
+    "outDir": "./dist/",
+    "sourceMap": true,
+    "noImplicitAny": true,
+    "module": "commonjs",
+    "target": "es6",
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
     "paths": {
-        "SRC/*": [
-          "src/*"
-        ]
+      "@/*": ["./src/*"],
     }
+  },
+  "include": ["src/**/*", "index.d.ts", "declarations.d.ts", "tests/**/*"],
+  "exclude": ["./node_modules", "./build", "./dist"],
 }
