--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/parser": "^5.48.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.1",
+    "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^6.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
