--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "productive-wallet",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.jsx",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "dev": "webpack serve  --config ./devWebpack.config.js",
